--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "MIT",
   "devDependencies": {
     "@netlify/functions": "^0.10.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
@@ -64,9 +65,11 @@
     "@analytics/google-analytics": "^0.5.3",
     "analytics": "^0.7.19",
     "analytics-plugin-do-not-track": "^0.1.5",
+    "express": "^4.17.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.2",
+    "serverless-http": "^2.7.0",
     "tailwindcss": "^3.0.0",
     "use-analytics": "^0.0.5",
     "use-http": "^1.0.26"
