--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,11 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       # - run: npm test
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: build/
+          retention-days: 1
   deploy-netlify:
     runs-on: ubuntu-latest
     needs: build
