chore: pack functions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "run-s lint clean build-info build:tailwind",
     "build": "run-s build:*",
     "build:webpack": "webpack --config webpack.prod.js",
-    "build:tsc": "tsc -p tsconfig.build.json",
+    "build:functions": "webpack --config webpack.functions.js",
+    "//build:tsc": "tsc -p tsconfig.build.json",
     "build:tailwind": "tailwindcss -i src/tailwind.css -o build/dist/tailwind.css",
     "clean": "rimraf build",
     "copyfiles": "run-s copyfiles:*",
