feat: implement google oauth

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "lint": "run-s lint:*",
     "lint:eslint": "eslint src/**/*.ts",
     "prenetlify": "run-s build",
-    "netlify": "netlify dev",
+    "netlify": "dotenv -e secrets.env netlify dev",
     "postbuild": "run-s copyfiles",
     "pretest": "rm -rf coverage/*",
     "test": "jest",
     "prestart": "run-s build-info copyfiles",
     "start": "run-s watch",
-    "watch": "concurrently npm:watch:*",
+    "watch": "dotenv -e secrets.env concurrently npm:watch:*",
     "watch:tailwind": "run-s \"build:tailwind -- --watch\"",
     "watch:webpack": "webpack serve --config webpack.dev.js"
   },
@@ -34,15 +34,21 @@
   "license": "MIT",
   "devDependencies": {
     "@netlify/functions": "^0.10.0",
+    "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
+    "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth": "^1.0.42",
+    "@types/passport-oauth2-refresh": "^1.1.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "concurrently": "^6.5.1",
     "copyfiles": "^2.4.1",
+    "dotenv-cli": "^4.1.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
@@ -66,13 +72,20 @@
     "@analytics/google-analytics": "^0.5.3",
     "analytics": "^0.7.19",
     "analytics-plugin-do-not-track": "^0.1.5",
+    "cookie-session": "^2.0.0",
     "express": "^4.17.2",
+    "passport": "^0.5.2",
+    "passport-google-oauth": "^2.0.0",
+    "passport-oauth2-refresh": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.2",
     "serverless-http": "^2.7.0",
     "tailwindcss": "^3.0.0",
+    "ts-registry": "^1.0.3",
+    "ts-registry-express": "^1.0.2",
     "use-analytics": "^0.0.5",
-    "use-http": "^1.0.26"
+    "use-http": "^1.0.26",
+    "uuid": "^8.3.2"
   }
 }
