--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "analytics-plugin-do-not-track": "^0.1.5",
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
+    "faunadb": "^4.4.1",
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
     "passport-oauth2-refresh": "^2.1.0",
