--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "analytics": "^0.7.19",
     "analytics-plugin-do-not-track": "^0.1.5",
     "cookie-session": "^2.0.0",
+    "encoding": "^0.1.13",
     "express": "^4.17.2",
     "faunadb": "^4.4.1",
     "passport": "^0.5.2",
