--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^14.14.9",
     "@types/passport": "^1.0.7",
     "@types/passport-google-oauth": "^1.0.42",
@@ -76,6 +77,7 @@
     "encoding": "^0.1.13",
     "express": "^4.17.2",
     "faunadb": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
     "passport-oauth2-refresh": "^2.1.0",
