--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ hashFiles('**/package-lock.json') }}
       - run: npm ci
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
       - run: npm run build --if-present
       # - run: npm test
       - uses: actions/upload-artifact@v2
