chore: use correct lint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,7 @@
     "no-new-wrappers": "error",
     "no-redeclare": "error",
     "no-sequences": "error",
-    "no-shadow": [
+    "@typescript-eslint/no-shadow": [
       "error",
       {
         "hoist": "all"
