chore: install graphql

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@netlify/functions": "^0.10.0",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^14.14.9",
@@ -79,6 +80,8 @@
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
     "faunadb": "^4.4.1",
+    "graphql": "^16.2.0",
+    "graphql-server-types": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
