--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,11 @@
   status = 200
 
 [[redirects]]
+  from = "/graphql/*"
+  to = "/.netlify/functions/graphql/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
