Draw the rest of the owl

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "data": "ts-node ./src/tools/convert.ts",
     "prebuild": "run-s lint clean build-info build:tailwind",
     "build": "run-s build:*",
+    "build:types": "ility -l typescript -i domain/v1/schema.oas2.json -o src/domain",
+    "postbuild:types": "rm src/domain/v1/express-routers.ts && rm src/domain/v1/validators.ts && mv src/domain/v1/types.ts src/domain/v1/api.g.ts",
+    "build:graphql": "generate-server-types -i domain/v1/schema.graphql -o src/domain/v1/graph.g.ts",
+    "build:client-types": "npx apollo codegen:generate --localSchemaFile=domain/v1/schema.graphql --target=typescript --tagName=gql",
     "build:webpack": "webpack --config webpack.prod.js",
     "build:functions": "webpack --config webpack.functions.js",
     "postbuild:functions": "ts-node tools/strip-require ./build/functions/auth.js",
-    "build:graphql": "generate-server-types -i src/domain/schema.graphql -o src/graphql/server-types.g.ts",
     "//build:tsc": "tsc -p tsconfig.build.json",
     "build:tailwind": "tailwindcss -i src/tailwind.css -o build/dist/tailwind.css",
     "clean": "rimraf build",
@@ -29,7 +32,8 @@
     "watch": "dotenv -e secrets.env concurrently npm:watch:*",
     "watch:graphql": "run-s \"build:graphql -- --watch\"",
     "watch:tailwind": "run-s \"build:tailwind -- --watch\"",
-    "watch:webpack": "webpack serve --config webpack.dev.js"
+    "watch:webpack": "webpack serve --config webpack.dev.js",
+    "provision": "dotenv -e secrets.env ts-node tools/provision.ts"
   },
   "keywords": [],
   "author": "",
@@ -39,13 +43,13 @@
     "@netlify/functions": "^0.10.0",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
-    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^14.14.9",
     "@types/passport": "^1.0.7",
     "@types/passport-google-oauth": "^1.0.42",
     "@types/passport-oauth2-refresh": "^1.1.1",
+    "@types/pg": "^8.6.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/uuid": "^8.3.3",
@@ -59,6 +63,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "ility": "^0.0.8",
     "jest": "^26.6.3",
     "netlify-cli": "^8.4.2",
     "npm-run-all": "^4.1.5",
@@ -75,6 +80,7 @@
   },
   "dependencies": {
     "@analytics/google-analytics": "^0.5.3",
+    "@apollo/client": "^3.5.6",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "analytics": "^0.7.19",
@@ -88,6 +94,7 @@
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
     "passport-oauth2-refresh": "^2.1.0",
+    "pg": "^8.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.2",
