--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           path: node_modules
           key: ${{ hashFiles('**/package-lock.json') }}
+      - run: npm i -g graphql@15 apollo
       - run: npm ci
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
       - run: npm run build --if-present
