chore: clean generated types before build

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build:types": "ility -l typescript -i domain/v1/schema.oas2.json -o src/domain",
     "postbuild:types": "rm src/domain/v1/express-routers.ts && rm src/domain/v1/validators.ts && mv src/domain/v1/types.ts src/domain/v1/api.g.ts",
     "build:graphql": "generate-server-types -i domain/v1/schema.graphql -o src/domain/v1/graph.g.ts",
+    "prebuild:client-types": "run-s clean:client-types",
     "build:client-types": "npx apollo codegen:generate --localSchemaFile=domain/v1/schema.graphql --target=typescript --tagName=gql",
     "build:webpack": "webpack --config webpack.prod.js",
     "build:functions": "webpack --config webpack.functions.js",
     "postbuild:functions": "ts-node tools/strip-require ./build/functions/auth.js",
     "//build:tsc": "tsc -p tsconfig.build.json",
     "build:tailwind": "tailwindcss -i src/tailwind.css -o build/dist/tailwind.css",
-    "clean": "rimraf build",
+    "clean": "run-s clean:*",
+    "clean:build": "rimraf build",
+    "clean:client-types": "find . -name __generated__ | xargs rm -rf",
     "copyfiles": "run-s copyfiles:*",
     "copyfiles:static": "copyfiles -u 1 static/**.* static/* build/dist",
     "build-info": "ts-node tools/build-info.ts > src/build-info.ts",
