--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
     "passport-google-oauth": "^2.0.0",
     "passport-oauth2-refresh": "^2.1.0",
     "pg": "^8.7.1",
+    "pusher": "^5.0.0",
+    "pusher-js": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.2",
