chore: install dataloader

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "analytics": "^0.7.19",
     "analytics-plugin-do-not-track": "^0.1.5",
     "cookie-session": "^2.0.0",
+    "dataloader": "^2.0.0",
     "express": "^4.17.2",
     "faunadb": "^4.4.1",
     "graphql": "^16.2.0",
